--- a/index.html
+++ b/index.html
@@ -71,7 +71,15 @@
             <blockquote>Though the number of peronal computers using Windows is large, yet the systems are proned to different types of attacks and thus, are vulnerable. The level of security is this much high that one won't need to install an antivirus program. It's just the matter of how the Linux system works.
             </blockquote>
             <h5>Customization</h5>
-            <blockquote>This is the era of Customization. This feature really makes Linux distros stand-out. If you like playing and tweaking the interface then linux is there for you. There are a number of Dekstop Environments(DEs) which are highly customizable and are maintained actively provided with cool themes made by people.</blockquote>
+            <blockquote>This is the era of Customization. This feature really makes Linux distros stand-out. If you like playing and tweaking the interface then linux is there for you. There are a number of Dekstop Environments(DEs) which are highly customizable and are maintained actively provided with cool themes made by people.
+            <b>Some screenshots of my Kali Linux running with GNOME as DE</b>
+            <div class="ss-div">
+                <img src="./images/ss1.png" alt="" >
+                <img src="./images/ss2.png" alt="" >
+                <img src="./images/ss3.png" alt="" >
+                <img src="./images/ss4.png" alt="" >
+            </div>
+            </blockquote>
             <h5>Varied Flavours</h5>
             <blockquote>As said in the very first paragraph only, Linux OSs are packaged as distros. The number of distros availble out there is 'much'.</blockquote>
             <h5>Applications</h5>
